# medopia-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
meditopia/: cli.py  client.py  config.py  uploader.py
