[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medopia-cli"
version = "0.1.0"
description = "CLI tool for uploading models and datasets to MedOpia"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["medopia", "cli", "medical-ai", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.urls]
Homepage = "https://medopia.io"
Repository = "https://github.com/medopia/medopia-cli"

[project.scripts]
medi = "medopia.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["medopia*"]
